force-app/main/default/objects/ExecutiveInformation__c/ExecutiveInformation__c.object-meta.xml
<CustomObject>
    <label>Executive Information</label>
    <nameField>
        <label>Info. Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executive Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>