force-app/main/default/objects/ExecutiveInformation__c/fields/BirthDay__c.field-meta.xml
<CustomField>
    <fullName>BirthDay__c</fullName>
    <label>Birth Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>