force-app/main/default/objects/ExecutiveInformation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Career</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>