force-app/main/default/objects/ExecutiveInformation__c/fields/EmploymentPeriod__c.field-meta.xml
<CustomField>
    <fullName>EmploymentPeriod__c</fullName>
    <label>Employment Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>