force-app/main/default/objects/ExecutiveInformation__c/fields/ExecName__c.field-meta.xml
<CustomField>
    <fullName>ExecName__c</fullName>
    <label>Executive Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>