force-app/main/default/objects/ExecutiveInformation__c/fields/ExpirationDay__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDay__c</fullName>
    <label>Expiration Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>