force-app/main/default/objects/ExecutiveInformation__c/fields/InfoSource__c.field-meta.xml
<CustomField>
    <fullName>InfoSource__c</fullName>
    <label>Information Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPENDART</fullName>
            </value>
            <value>
                <fullName>SMINFO</fullName>
            </value>
            <value>
                <fullName>ALIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>