force-app/main/default/objects/ExecutiveInformation__c/fields/RegisteredExecutive__c.field-meta.xml
<CustomField>
    <fullName>RegisteredExecutive__c</fullName>
    <label>Registered Executive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>