force-app/main/default/objects/ExecutiveInformation__c/fields/SeqNo__c.field-meta.xml
<CustomField>
    <fullName>SeqNo__c</fullName>
    <label>SEQ. No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>