force-app/main/default/objects/ExecutiveInformation__c/fields/StockHolder__c.field-meta.xml
<CustomField>
    <fullName>StockHolder__c</fullName>
    <label>Stock Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>