force-app/main/default/objects/ExecutiveInformation__c/fields/WorkingType__c.field-meta.xml
<CustomField>
    <fullName>WorkingType__c</fullName>
    <label>Working Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>